Add data loading and exploration cells to preprocessing notebook

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -14,7 +14,45 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Load the dataset\n",
+        "df = pd.read_csv(\"data/ev_battery_charging_data.csv\")\n",
+        "\n",
+        "# Show first few rows\n",
+        "df.head()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check info\n",
+        "df.info()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check if any missing values\n",
+        "df.isnull().sum()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Basic statistics\n",
+        "df.describe()\n"
+      ]
     }
   ],
   "metadata": {
