--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -53,6 +53,77 @@
         "# Basic statistics\n",
         "df.describe()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Cleaning\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Drop missing rows\n",
+        "df = df.dropna()\n",
+        "\n",
+        "# Drop duplicate rows\n",
+        "df = df.drop_duplicates()\n",
+        "\n",
+        "df.shape  # to see remaining rows and columns\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Define Features and Target\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Separate features (X) and target (y)\n",
+        "# The target is 'Optimal Charging Duration Class'\n",
+        "X = df.drop('Optimal Charging Duration Class', axis=1)  # input features\n",
+        "y = df['Optimal Charging Duration Class']               # target variable\n",
+        "\n",
+        "print(f\"Features shape: {X.shape}\")\n",
+        "print(f\"Target shape: {y.shape}\")\n",
+        "print(f\"\\nTarget distribution:\")\n",
+        "print(y.value_counts().sort_index())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train-Test Split\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "print(f\"Training set: {X_train.shape[0]} samples\")\n",
+        "print(f\"Test set: {X_test.shape[0]} samples\")\n",
+        "print(f\"\\nTraining target distribution:\")\n",
+        "print(y_train.value_counts().sort_index())\n",
+        "print(f\"\\nTest target distribution:\")\n",
+        "print(y_test.value_counts().sort_index())\n"
+      ]
     }
   ],
   "metadata": {
